monday in landau

--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -41,6 +41,11 @@ From these two proposals follows that it is impossible to have third pattern, wh
 % In both types of languages, I analyze it as if there was a head, but it is phonologically empty/deleted. I show that this allows me to make a distinction between German and languages like Polish, that do not allow for the case competition as German does. OHG and Gothic also independently show that they can be derived from a double element structure.
 
 
+
+
+Something that also should be taking into account in the analysis is that some languages do not have case attraction. How can that be modeled, without saying `parameter for attraction: yes, parameter for attraction: no'
+
+
 \section{\tsc{wh}-relatives}
 
 % My claim: the behavior in Modern German headless relatives is a consequence of its \tsc{wh}-morphology.
@@ -143,7 +148,7 @@ Jan has what returned he stolen has\\
 In conclusion, extraposition facts show independently of the case facts that the relative pronoun in Modern German is syntactically part of the relative clause.
 
 
-\subsection{Two problems}
+\subsection{Two open issues}
 
 The previous section showed that the relative pronoun in a Modern German headless relative is syntactically part of the relative clause. The analysis is as follows: the relative pronoun (part of the relative clause) takes the case of the predicate in the relative clause. The sentence is grammatical if the external case is contained in the relative clause case.
 
@@ -153,18 +158,18 @@ Now there are two problems, to subjects that need more said about them.
 
 (1) we keep talking about this external case. Is this part of the derivation as well? Because it is clear that somehow reference needs to be made to it. So far we have this picture: no external case yet. %First, normally there is a single DP connected to a predicate. Here there is a single DP, the relative pronoun, that is connected to both of the predicates. Or, it is first connected to the clause it is in, but then there is this `secondary' relationship.
 
-(2) why do not all languages behave like Modern German? Where is place for differences between languages? For Gothic and Old High German we are still ok, because we also allow for this type of case attraction there. But how about a language like Polish, that does not allow for it? How can this type of case attraction be excluded?
+(2) why do not all languages behave like Modern German? Where is space for differences between languages? For Gothic and Old High German we are still ok, because we also allow for this type of case attraction there. But how about a language like Polish, that does not allow for it? How can this type of case attraction be excluded?
 
-To solve both of these problems, I introduce an external head. %(2) if we follow this logic, to show this type of case competition? (OHG and Gothic also allow this one, so that is fine, they just allow something else in addition, and I'll get back to that later) But there are languages like Polish, which is so-called `strictly matching'. It always gives an ungrammatical result when there is case competition (and not syncretism or two identical cases).
+%(2) if we follow this logic, to show this type of case competition? (OHG and Gothic also allow this one, so that is fine, they just allow something else in addition, and I'll get back to that later) But there are languages like Polish, which is so-called `strictly matching'. It always gives an ungrammatical result when there is case competition (and not syncretism or two identical cases).
+
+In this section I first lay out these two problems in more detail. The next section introduces a head, external to the relative clause, that solves both these problems.
 
 
-\subsubsection{Care about external case}
+\subsubsection{How to get access to external case}
 
-%%relative pronoun cares about internal and external case
-Just like in Gothic and Old High German, the Modern German relative pronoun is sensitive to the internal and external case.
-The internal case only surfaces when it is more complex than the external case.
+The first open issue with the analysis in X is how the relative pronoun gets access to the external case.
 
-Consider the examples in \ref{ex:mg-internal}. In both sentences, the internal case is accusative, because the predicate in the relative clause \tit{mögen} `to like' takes accusative objects. The external case differs between the two sentences. In \ref{ex:mg-dat-acc-wen} the external case is dative, because the predicate \tit{vertrauen} `to trust' takes dative objects.  In \ref{ex:mg-nom-acc-wen}, the external case is nominative, because \tit{besuchen} `to visit' takes nominative subjects.
+The relative pronoun in Modern German headless relatives is sensitive to both the internal and the external case. Consider the examples in \ref{ex:mg-internal}. In both sentences, the internal case is accusative, because the predicate in the relative clause \tit{mögen} `to like' takes accusative objects. The external case differs between the two sentences. In \ref{ex:mg-dat-acc-wen} the external case is dative, because the predicate \tit{vertrauen} `to trust' takes dative objects.  In \ref{ex:mg-nom-acc-wen}, the external case is nominative, because \tit{besuchen} `to visit' takes nominative subjects.
 
 \ex.\label{ex:mg-internal}
 \ag. *Ich vertraue wen \tbf{auch} \tbf{Maria} \tbf{mag}. \\
@@ -174,33 +179,40 @@ I.\ac{nom} trust.1\ac{sg}\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\a
  we.\ac{acc} visit.3\ac{sg}\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} like.3\ac{sg}\scsub{[acc]}\\
  `Who visits us, Maria likes.' \flushfill{adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-wen}
 
-The sentence in \ref{ex:mg-dat-acc-wen} is ungrammatical, and the one in \ref{ex:mg-nom-acc-wen} is not. The relative clauses in both sentences are identical case-wise, so the difference in ungrammaticality cannot lie there. The only observable differences are found in the main clause. The former sentence is ungrammatical, because the internal accusative case cannot win the case competition over the external dative. The latter sentence is grammatical, because the internal accusative case wins over the external nominative. The conclusion that can be drawn from this is that the relative pronoun in Modern German headless relatives cares about both the internal and the external case.
+The sentence in \ref{ex:mg-dat-acc-wen} is ungrammatical, and the one in \ref{ex:mg-nom-acc-wen} is not. The internal case cannot be the source of ungrammaticality, because the relative clauses are identical regarding case, i.e. they both take accusative. The external case differs, however. In Chapter X I showed that headless relatives in Modern German are (just like e.g. Gothic) sensitive to the case scale: \tsc{nom} < \tsc{acc} < \tsc{dat}.
 
-In sum, even though the relative pronoun in Modern German headless relatives is always part of the relative clause, the relative pronoun also takes the external case into account. That means that the relative pronoun somehow needs to have access to the main clause case. In the next section I argue that this `somehow' can be done with an external head.
+\ref{ex:mg-dat-acc-wen} is grammatical, because the internal accusative case wins over the external nominative. \ref{ex:mg-nom-acc-wen} is ungrammatical, because the internal accusative case cannot win the case competition over the external dative. It can be concluded that the relative pronoun in Modern German headless relatives cares about both the internal and the external case.
+
+In sum, even though the relative pronoun in Modern German headless relatives is always part of the relative clause, the relative pronoun also takes the external case into account. That means that the relative pronoun needs to have access to the main clause case. I propose that this can be achieved by introducing an external head to the relative clause. In Section X I show how this solves the issue.
 
 
-\subsubsection{How to exclude this}
+\subsubsection{How to disallow the pattern}
 
-Now I do not want to say that Polish and German differ in that Polish is `strictly matching' and Modern German is `more relaxed', that this is something construction- and language-specific. Instead, I let the distinction in headless relatives follow from something within the language. This something is their light-headed relatives.
+The second issue with the analysis in X is how to disallow the Modern German pattern for other languages.
 
-Then there are languages like Polish. In Polish, case competition does not take place at all. All combinations are ungrammatical. Consider x.
+In Chapter X I showed that there are also languages that do not show case competition. Polish is an example of a language that only allows for headless relative when the internal and the external case match (or when the relative pronoun is syncretic for these cases). The language is so-called `strictly matching'.
+
+Consider the Polish and German example below.
 
 \ex.
 \ag. *Jan lubi \tbf{komu} \tbf{(kolwiek)} \tbf{dokucza}.\\
 Jan like.3\tsc{sg}\scsub{[acc]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever tease.3\tsc{sg}\scsub{[dat]}\\
-`Jan likes whoever he teases.'
-\bg. *Jan ufa \tbf{komu} \tbf{(kolwiek)} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
- Jan trust.3\tsc{sg}\scsub{[dat]} \tsc{rel}.\tsc{dat}.\tsc{sg}.\tsc{an} ever let.3\tsc{sg}\scsub{[acc]} to home\\
- `Jan trusts whoever he let into the house.'
+`Jan likes whoever he teases.'\flushfill{Polish}\label{ex:polish-acc-dat}
+\bg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+ I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
+ `I invite whoever Maria also trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-disallow}
 
-Where does the difference between Modern German and Polish lie? Where can we model this difference? Polish and Modern German seem to be pretty similar here. Both have a \tsc{wh}-pronoun functioning as relative pronoun for instance. In Section X I show an external head can solve this problem too.
+Why is the German sentence grammatical and the Polish one not? I do not want to say that one language allows for case competition and the other one does not. Instead, the difference follows from something within the language.
+
+On the surface forms of these headless relatives, there is nothing that differs between them. However, a closely related construction, the light-headed relative, does show a difference between the languages.
+
+I propose that headless relatives are derived from a construction that contains an external head. This allows for making a distinction between languages that show case competition (like Modern German) and languages that do not (like Polish). In Section X I show how this solves the issue.
 
 
 
 \subsection{Solution: an external head}
 
-I propose a single answer to both of these questions: there is an external head. So even though we say these relatives are headless relatives, at some point in the derivation there actually is a head of the relative clause.
-
+I propose a single answer to both issues raised in Section X: relative clauses in headless relatives have an external heads. So even though we say these relatives are headless relatives, at some point in the derivation there actually is a head of the relative clause.
 
 This is the head of the relative clause, and it is deleted in Modern German (as long as it contains all cases of the relative pronoun). This external head in Polish is not deleted, because it does not add any extra definiteness or indefiniteness. Before I show how this works exactly, I show some independent evidence for assuming that there is this head.
 
@@ -228,7 +240,7 @@ So, we have the head. Translating this to relative pronouns, there is the relati
 Let me now show how this solves the external case problems and how it helps exclude some languages.
 
 
-\subsubsection{Solving external case care}
+\subsubsection{Getting access to external case}
 
 --give here a table with on one side the tree repeated and on the other side the head, with XP at the bottom?--
 split the relative pronoun up in the w part and the other part, because this is already the subset relation
@@ -236,7 +248,7 @@ split the relative pronoun up in the w part and the other part, because this is 
 Now this accusative here can license an external nominative case. The idea is: it is inside this accusative already. We understand why it could not license a dative: \tsc{f3} is not contained in the accusative.
 
 
-\subsubsection{Excluding some languages}
+\subsubsection{Disallowing the pattern}
 
 \ex. Polish light-headed relative
 
