--- a/introduction.tex
+++ b/introduction.tex
@@ -143,3 +143,11 @@ For both I will show that morphology is leading. What we observe in syntax is a 
 % I connect this crosslinguistic variation to morphology.. so i reduce it to differences in the lexicon
 %
 % In Part \ref{part:details} I show how all of this can be derived in derivations.
+
+
+
+\section{The scope of this dissertation}
+
+\subsection{Case attraction}
+
+\subsection{Syncretism}
