--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -238,7 +238,7 @@ To summarize
 
 
 
-\subsection{Possible counterexamples}
+\subsection{Languages without case attraction}
 
 Old English, Old Icelandic both show: \tsc{d}-pronoun plus invariant relativizer + always take case from the main clause
 
@@ -246,7 +246,6 @@ Greek
 
 Ancient Greek also actually has both directions (see \cite{vanriemsdijk2006}), so there is actually not a language with external only + hierarchy effects
 
-\subsection{No winner}
 
 % The nativeness of the headless relative constructions under
 % consideration, and in particular those represented by group (I), can be
@@ -256,14 +255,10 @@ Ancient Greek also actually has both directions (see \cite{vanriemsdijk2006}), s
 % they occur in opposition to the Greek. Evidence of the first type is
 % found in Mk 10:32, Luk 3:13, Rom 14:19, II Cor 8:11, Col 3:2, and elsewhere.
 
-What does not exist: external only
-
-Something that comes close:
-
-And to complete the picture, there are languages in which nothing goes:
-
 Polish and Italian have \tsc{wh}-pronouns but do not allow for conflicts
 
+
+What does not exist: external only
 
 \section{Relative pronouns}
 
