--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -46,7 +46,7 @@ From these two proposals follows that it is impossible to have third pattern, wh
 Something that also should be taking into account in the analysis is that some languages do not have case attraction. How can that be modeled, without saying `parameter for attraction: yes, parameter for attraction: no'
 
 
-\section{\tsc{wh}-relatives}
+\section{The Modern German pattern}
 
 % My claim: the behavior in Modern German headless relatives is a consequence of its \tsc{wh}-morphology.
 
@@ -91,11 +91,11 @@ The structure shows an accusative in the relative clause. An \tsc{acc}P by defin
 We also understand that the other way around does not work: a nominative in the relative clause does not contain an accusative.
 
 
-\subsection{The relative pronoun in the relative clause}
+\subsection{Relative pronouns in the relative clause}
 
-In this section I show that the relative pronoun in Modern German headless relatives is part of the relative clause. The evidence comes from extraposition. In Modern German, it is possible to extrapose a clause (a CP), but not a noun phrase (DP). The relative clause including the relative pronoun in a headless relative can be extraposed, which indicates that the relative pronoun is part of the relative clause. In what follows I show that CPs can be extraposed and DPs cannot. Then I illustrate how relative clauses including the relative pronoun in headless relatives pattern with CPs.
+In this section I show that the relative pronoun in Modern German headless relatives is part of the relative clause. The evidence comes from extraposition. In Modern German, it is possible to extrapose a CP (a clause), but not a DP (a noun phrase). In this section I first show that Modern German CPs can be extraposed and DPs cannot. Then I illustrate how relative clauses including the relative pronoun in headless relatives pattern with CPs: they can be extraposed as well. This indicates that the relative pronoun is part of the relative clause.
 
-The sentences in \ref{ex:mg-extrapose-cp} show that it is possible to extrapose CP. In \ref{ex:mg-extrapose-cp-base}, the clausal object \tit{wie es dir geht} `how you are doing', marked here in bold, appears in its base position. This objects can be extraposed to the right edge of the clause, shown in \ref{ex:mg-extrapose-cp-moved}.
+The sentences in \ref{ex:mg-extrapose-cp} show that it is possible to extrapose a CP. In \ref{ex:mg-extrapose-cp-base}, the clausal object \tit{wie es dir geht} `how you are doing', marked here in bold, appears in its base position. It can be extraposed to the right edge of the clause, shown in \ref{ex:mg-extrapose-cp-moved}.
 
 \ex.\label{ex:mg-extrapose-cp}
 \ag. Mir ist \tbf{wie} \tbf{es} \tbf{dir} \tbf{geht} egal.\\
@@ -105,7 +105,7 @@ The sentences in \ref{ex:mg-extrapose-cp} show that it is possible to extrapose 
  1\tsc{sg}.\tsc{dat} is {the same} how it 2\tsc{sg}.\tsc{dat} goes\\
  `I don't care how you are doing.' \flushfill{Modern German}\label{ex:mg-extrapose-cp-moved}
 
-\ref{ex:mg-extrapose-dp} illustrates that it is impossible to extrapose a DP. The clausal object of \ref{ex:mg-extrapose-cp} is replaced by a simplex noun phrase \tit{die Sache} `that matter'.
+\ref{ex:mg-extrapose-dp} illustrates that it is impossible to extrapose a DP. The clausal object of \ref{ex:mg-extrapose-cp} is replaced by the simplex noun phrase \tit{die Sache} `that matter'.
 In \ref{ex:mg-extrapose-dp-base} the object, marked in bold, appears in its base position. In \ref{ex:mg-extrapose-dp-moved} it is extraposed, and the sentence is no longer grammatical.
 
 \ex.\label{ex:mg-extrapose-dp}
@@ -116,7 +116,7 @@ In \ref{ex:mg-extrapose-dp-base} the object, marked in bold, appears in its base
  1\tsc{sg}.\tsc{dat} is {the same} that matter\\
  `I don't care about that matter.' \flushfill{Modern German}\label{ex:mg-extrapose-dp-moved}
 
-The same CP-DP asymmetry can be observed with relative clauses. A relative clause is a CP, and the head of a relative clause is a DP. The sentences in \ref{ex:extra-headed} contain the relative clause \tit{was er gestohlen hat} `what he has stolen'. This is marked in bold in the examples. The (light) head of the relative clause is \tit{das}.
+The same asymmetry between CPs and DPs can be observed with relative clauses. A relative clause is a CP, and the head of a relative clause is a DP. The sentences in \ref{ex:extra-headed} contain the relative clause \tit{was er gestohlen hat} `what he has stolen'. This is marked in bold in the examples. The (light) head of the relative clause is \tit{das}.
 In \ref{ex:extra-headed-base}, the relative clause and its head appear in base position. In \ref{ex:extra-headed-only-clause}, the relative clause is extraposed. This is grammatical, because it is possible to extrapose CPs in Modern German. In \ref{ex:extra-headed-head-clause}, the relative clause and the head are extraposed. This is ungrammatical, because it is possible to extrapose DPs.
 
 \ex. \label{ex:extra-headed} adapted from Groos/v Riemsdijk
@@ -131,8 +131,8 @@ Jan has returned the money which he stolen has\\
 \glt `Jan has returned the money that he has stolen.'\label{ex:extra-headed-head-clause}
 
 The same can be observed in relative clauses without a head. \ref{ex:extra-headless} is the same sentence as in \ref{ex:extra-headed} only without the overt head. The relative clause is marked in bold again.
-In \ref{ex:extra-headless-base}, the relative clause and its head appear in base position. In \ref{ex:extra-headless-clause}, the relative clause is extraposed. This is grammatical, because it is possible to extrapose CPs in Modern German. In \ref{ex:extra-headless-no-rel}, the relative clause and the head are extraposed. This is ungrammatical, because it is possible to extrapose DPs.
-This shows that the relative pronoun in headless relatives in Modern German are necessarily part of the relative clause (a CP).
+In \ref{ex:extra-headless-base}, the relative clause appears in base position. In \ref{ex:extra-headless-clause}, the relative clause is extraposed. This is grammatical, because it is possible to extrapose CPs in Modern German. In \ref{ex:extra-headless-no-rel}, the relative clause is extraposed without the relative pronouns. This is ungrammatical, because the relative pronoun is part of the CP.
+This shows that the relative pronoun in headless relatives in Modern German are necessarily part of a CP, which is here a relative clause.
 
 \ex.\label{ex:extra-headless}
 \ag. Jan hat \tbf{was} \tbf{er} \tbf{gestohlen} \tbf{hat} zurückgegeben.\\
@@ -145,7 +145,7 @@ Jan has returned what he stolen has\\
 Jan has what returned he stolen has\\
 `Hans has returned what he has stolen.' \citet[185]{groos1981}\label{ex:extra-headless-no-rel}
 
-In conclusion, extraposition facts show independently of the case facts that the relative pronoun in Modern German is syntactically part of the relative clause.
+In conclusion, extraposition facts show, independently of the case facts, that the relative pronoun in Modern German is syntactically part of the relative clause.
 
 
 \subsection{Two open issues}
@@ -190,7 +190,7 @@ In sum, even though the relative pronoun in Modern German headless relatives is 
 
 The second issue with the analysis in X is how to disallow the Modern German pattern for other languages.
 
-In Chapter X I showed that there are also languages that do not show case competition. Polish is an example of a language that only allows for headless relative when the internal and the external case match (or when the relative pronoun is syncretic for these cases). The language is so-called `strictly matching'.
+In Chapter X I showed that there are also languages that do not show case competition. Polish is an example of a language that only allows for headless relatives when the internal and the external case match (or when the relative pronoun is syncretic for these cases). The language is so-called `strictly matching'.
 
 Consider the Polish and German example below.
 
@@ -387,7 +387,7 @@ Finnish is like German because its light-headed relatives also add some definite
 
 
 
-\section{\tsc{d}-relatives}
+\section{The Gothic/OHG pattern}
 
 My claim: d-morphology allows for both directions
 
@@ -412,6 +412,7 @@ does not have attraction
 
 
 
+\section{No third pattern}
 
 
 
