opzet voor hele dissertatie :)
nu alleen nog opschrijven

--- a/excluding-the-third-pattern.tex
+++ b/excluding-the-third-pattern.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{Excluding the third pattern}\label{ch:relativization}
+\chapter{The derivations of the patterns}\label{ch:relativization}
 
 As I have shown in the previous chapter, there are two types of languages with case competition possible:
 (1) a language like Gothic or Old High German, in which the case competition always takes place
@@ -24,6 +24,22 @@ Schematically this can be shown like this:
   \end{tabular}
 \end{table}
 
+Every speaker of a language needs to learn what the pattern for its language is. Headless relatives are infrequent, is what can be said about at least German. Even though not everybody likes the construction to begin with (they prefer (light-)headed relatives), people seem to have the clear intuition that \tsc{int}>\tsc{ext} is much better than the other way around. It seems implausible that learners of German learn this pattern from the few examples they got (there are just too few to make a generalization). Still, the intuition exist. And it is very particular: more complex case wins over less complex case, but only if the internal case is more complex than the external case. This already sounds hard to learn from the input as a generalization.
+
+People have also been describing it like this: formulation from Cinque in his book. (which is actually wrong)
+
+If it does not come from the input, where does it come from? I claim that it comes from other properties of the language. In Grosu's terminology: is it derived or basic? Ideally, we would want it to be derived.
+
+A similar avenue was pursued by \citealt{himmelreich2017}. She specific languages for having different types of agree (up, down) and different types of probes (active, non-active). Doing that, she successfully derived free relatives and parasitic gaps in different languages. Grosu 1994 linked richness of inflection to liberality. He actually talked about the richness of pro.
+
+
+The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Instead, I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. To be more specific, I derive the different behaviors from relative pronouns. I decompose them, and I determine what parts of syntactic structure they correspond to. Having independently done that, I return to the headless relatives, and I derive the facts.
+
+
+In this chapter I show that there are different derivations for these languages:
+
+
+
 Proposal of wh in a nutshell: the wh-relative is part of the relative clause. that's why it takes the internal case. I argue for an external head, that carries the external case. This head is also necessary to distinguish Modern German from languages like Polish. The relative pronoun deletes the external head.
 
 Proposal of d in a nutshell: the analysis here is partly identical to the one for Modern German wh-relatives. d-relative is also part of the relative clause, and it can take the internal case, and it deletes the external head. Additionally, there can be a d, d-combination, and the relative pronoun is deleted under c-command under containment.
@@ -40,10 +56,6 @@ From these two proposals follows that it is impossible to have third pattern, wh
 
 % In both types of languages, I analyze it as if there was a head, but it is phonologically empty/deleted. I show that this allows me to make a distinction between German and languages like Polish, that do not allow for the case competition as German does. OHG and Gothic also independently show that they can be derived from a double element structure.
 
-
-
-
-Something that also should be taking into account in the analysis is that some languages do not have case attraction. How can that be modeled, without saying `parameter for attraction: yes, parameter for attraction: no'
 
 
 \section{The Modern German pattern}
@@ -503,3 +515,7 @@ Now the relative clause is built first again, this time only including the nomin
 So, this seems to work fine. The assumptions you have to do in order to make this are the following. First, case is complex. Second, you can remerge an embedded node (grafting). For the first one I have argued in Chapter \ref{ch:decomposition}. The second one could use some additional argumentation. It is a mix between internal remerge (move) and external merge, namely external remerge. Other literature on multidominance and grafting, other phenomena. Problems: linearization, .. But even if fix all these theoretical problems, there is an empirical one.
 
 That is, I want to connect this behavior of Modern German headless relatives to the shape of its relative pronouns. These pronouns are \tsc{wh}-elements. The OHG and Gothic ones are not \tsc{wh}, they are \tsc{d}. Their relative pronouns look different, and so their headless relatives can also behave differently.
+
+\section{The not attested pattern}
+
+here
