--- a/going-into-detail.tex
+++ b/going-into-detail.tex
@@ -2,7 +2,13 @@
 
 \chapter{Step by step derivations}
 
-In the next chapter I formulate the possibilities of the languages in terms of lexical entries. So all the behavior we see in this section is derived from how the relative pronouns and the external head is specified in the lexicon.
+Putting all of this together in detail
+
+What will lead to the different derivations from the last chapter? The only source of crosslinguistic variation: different lexical entries.
+
+That's why I talk about the internal structure of the relative pronoun and the external head
+
+So all the behavior we see in this section is derived from how the relative pronouns and the external head is specified in the lexicon.
 
 OHG d: spec, rel
 OHG wh: only interrogative
@@ -12,6 +18,74 @@ MG wh: interrogative, rel
 
 P d: deix, rel
 P wh: interrog, rel
+
+
+\section{Relative pronouns}
+
+Is there any other observable difference between the languages? Yes! The shape of the relative pronouns.
+
+This will be intuition later
+
+\begin{itemize}
+  \item when a language's light-headed relatives are \tsc{d} - \tsc{wh}, non-matching is never allowed
+  \item with \tsc{wh} morphology, the internal case can win
+  \item with \tsc{d} morphology (or is it when the relative pronoun can take a complement?), both the external and the internal can win
+\end{itemize}
+
+
+\begin{table}[H]
+ \center
+ \caption {Relative pronouns in headless relatives in \ac{mg}}
+  \begin{tabular}{ccc}
+  \toprule
+       & \ac{inan} & \ac{an} \\
+        \cmidrule{2-3}
+    \ac{nom}  & w-as     & w-er    \\
+    \ac{acc}  & w-as     & w-en   \\
+    \ac{dat}  & -      & w-em    \\
+  \bottomrule
+  \end{tabular}
+\end{table}
+
+\begin{table}[H]\label{tbl:paradigmohg}
+ \center
+ \caption {Relative pronouns in headless relatives in \ac{ohg}}
+  \begin{tabular}{cccc}
+  \toprule
+       & \ac{n}.\ac{sg} & \ac{m}.\ac{sg}  & \ac{f}.\ac{sg} \\
+        \cmidrule{2-4}
+  \ac{nom} & d-aȥ           & d-ër          & d-iu      \\
+  \ac{acc} & d-aȥ        & d-ën      & d-ea/-ia/(-ie) \\
+  \ac{dat} & d-ëmu/-ëmo     & d-ëmu/-ëmo   & d-ëru/-ëro   \\
+  \bottomrule
+         & \ac{n}.\ac{pl} & \ac{m}.\ac{pl}   & \ac{f}.\ac{pl} \\
+          \cmidrule{2-4}
+    \ac{nom}  & d-iu/-ei      &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
+    \ac{acc}  & d-iu/-ei      &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
+    \ac{dat}  & d-ēm/-ēn      &  d-ēm/-ēn        & d-ēm/-ēn        \\
+    \bottomrule
+  \end{tabular}
+\end{table}
+
+\begin{table}[H]
+ \center
+ \caption {Relative pronouns in headless relatives in Gothic}
+  \begin{tabular}{cccc}
+  \toprule
+       & \ac{n}.\ac{sg}  & \ac{m}.\ac{sg} & \ac{f}.\ac{sg}  \\
+         \cmidrule{2-4}
+    \ac{nom}  & þ-at-ei      & s-a-ei      & s-ō-ei     \\
+    \ac{acc} & þ-at-ei       & þ-an-ei      & þ-ō-ei      \\
+    \ac{dat}  & þ-amm-ei     & þ-amm-ei    & þ-izái-ei    \\
+  \bottomrule
+         & \ac{n}.\ac{pl} & \ac{m}.\ac{pl} & \ac{f}.\ac{pl} \\
+          \cmidrule{2-4}
+    \ac{nom}  & þ-ō-ei     & þ-ái-ei     & þ-ōz-ei     \\
+    \ac{acc}  & þ-ō-ei      & þ-anz-ei    & þ-ōz-ei     \\
+    \ac{dat}  & þ-áim-ei    & þ-áim-ei     & þ-áim-ei     \\
+    \bottomrule
+  \end{tabular}
+\end{table}
 
 \section{Decomposing pronouns}
 
