--- a/old files/beyond-germanic.tex
+++ b/old files/beyond-germanic.tex
@@ -22,17 +22,7 @@ Jan likes\scsub{acc} who.\tsc{acc} teases\scsub{dat}\\
 Jan likes\scsub{acc} who.\tsc{dat} teases\scsub{dat}\\
 `Jan likes whoever he teases.'
 
-\begin{table}[h]
-	\center
-	\setlength{\tabcolsep}{10pt}
-	\begin{tabular}{|c|c|c|c|c|}\hline
-		\diagbox{m}{e}	& V\scsub{nom} 											& V\scsub{acc} 											& V\scsub{gen} 											& V\scsub{dat} 											\\\hline
-		V\scsub{nom} 		& \tsc{nom} 												& \diagbox{*\tsc{nom}}{*\tsc{acc}}	& \diagbox{*\tsc{nom}}{*\tsc{gen}}	& \diagbox{*\tsc{nom}}{*\tsc{dat}} 	\\\hline
-		V\scsub{acc}		& \diagbox{*\tsc{acc}}{*\tsc{nom}}	& \tsc{acc} 												& \tsc{acc/gen} 										& \diagbox{*\tsc{acc}}{*\tsc{dat}} 	\\\hline
-		V\scsub{gen} 		& \diagbox{*\tsc{gen}}{*\tsc{nom}}	& \tsc{acc/gen} 										& \tsc{gen} 												& \diagbox{*\tsc{gen}}{*\tsc{dat}} 	\\\hline
-		V\scsub{dat} 		& \diagbox{*\tsc{dat}}{*\tsc{nom}}	&	\diagbox{*\tsc{dat}}{*\tsc{acc}}	& \diagbox{*\tsc{dat}}{*\tsc{gen}} 	& \tsc{dat}													\\\hline
-	\end{tabular}
-\end{table}
+very small table, only dative and accusative
 
 
 
