--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -5,10 +5,9 @@
 I showed that headless relatives crosslinguistically make reference to the case scale: if two cases are in competition, it is always the same that wins.
 However, there is a second aspect to headless relatives, which differs across languages. That is, sometimes the case competition does not even take place, or rather, there is no winner to the competition. I show that whether is not the case competition takes place depends on the type of relative pronoun that is used. I distinguish two types of relative pronouns: \tsc{wh}-pronouns and \tsc{d}-pronouns.
 
-There are languages in which both the internal and the external case can win (like Gothic). There are also languages in which only the internal case can win. Crucially, there is no language in which a case competition takes place but only the external case can win.\footnote{
-There are languages in which the external case always surfaces, no matter the internal case. These languages are for instance Old English and Old Icelandic (and maybe Greek?). I come back that in Section X.
-}
-Another possibility that is attested is that none of the case can win, that only matching cases give a winner. I summarize this in a table:
+In what follows I first discuss the different possibilities for languages that show case competition.
+There are languages in which both the internal and the external case can win (like Gothic). There are also languages in which only the internal case can win. Crucially, there is no language in which a case competition takes place but only the external case can win.
+I summarize this in a table:
 
 \begin{table}[H]
  \center
@@ -20,27 +19,18 @@ Another possibility that is attested is that none of the case can win, that only
   Gothic OHG  & ✔          & ✔         \\
   \ac{mg}  & ✔           & *         \\
   n.a.     & *          & ✔         \\
-    Polish    & *                   & *                 \\
   \bottomrule
   \end{tabular}
 \end{table}
 
-Every speaker of a language needs to learn what the pattern for its language is. Headless relatives are infrequent, is what can be said about at least German. Even though not everybody likes the construction to begin with (they prefer (light-)headed relatives), people seem to have the clear intuition that \tsc{int}>\tsc{ext} is much better than the other way around. It seems implausible that learners of German learn this pattern from the few examples they got (there are just too few to make a generalization). Still, the intuition exist. And it is very particular: more complex case wins over less complex case, but only if the internal case is more complex than the external case. This already sounds hard to learn from the input as a generalization.
+Now there are also languages that do not do case competition. There are two types I found so far too:
+There are languages in which the external case always surfaces, no matter the internal case. These languages are for instance Old English and and Greek.
+Another type of language does not allow for any type of mismatch.
+What I have not seen so far: a language in which the internal case surfaces, no matter what happens with the external one.
 
-People have also been describing it like this: formulation from Cinque in his book. (which is actually wrong)
+\section{Internal or external wins}
 
-If it does not come from the input, where does it come from? I claim that it comes from other properties of the language. In Grosu's terminology: is it derived or basic? Ideally, we would want it to be derived.
-
-A similar avenue was pursued by \citealt{himmelreich2017}. She specific languages for having different types of agree (up, down) and different types of probes (active, non-active). Doing that, she successfully derived free relatives and parasitic gaps in different languages. Grosu 1994 linked richness of inflection to liberality. He actually talked about the richness of pro.
-
-
-The crucial difference with I'm doing is that I'm not relying on an arbitrary value I assigned to a language (say null head is active probe, probing only happens upwards). Instead, I look for patterns within the languages themselves, and let the facts of the headless relatives follow from those. To be more specific, I derive the different behaviors from relative pronouns. I decompose them, and I determine what parts of syntactic structure they correspond to. Having independently done that, I return to the headless relatives, and I derive the facts.
-
-
-\section{Headless relatives}
-
-\subsection{Both}
-\subsubsection{Gothic}
+\subsection{Gothic}
 
 \begin{table}[H]
   \center
@@ -50,7 +40,7 @@ The crucial difference with I'm doing is that I'm not relying on an arbitrary va
 \end{table}
 
 
-\subsubsection{Old High German}
+\subsection{Old High German}
 
 % Old High German is widely discussed in the literature because of its case attraction (references).
 %
@@ -139,7 +129,10 @@ The relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in t
 \phantom{x}
 
 
-\subsection{Only internal}
+\section{Internal case wins}
+
+There is really case competition: see appendix
+
 
 In \ac{mg}, only internal case can win.
 
@@ -238,7 +231,7 @@ To summarize
 
 
 
-\subsection{Languages without case attraction}
+\section{Languages without case attraction}
 
 Old English, Old Icelandic both show: \tsc{d}-pronoun plus invariant relativizer + always take case from the main clause
 
@@ -260,69 +253,87 @@ Polish and Italian have \tsc{wh}-pronouns but do not allow for conflicts
 
 What does not exist: external only
 
-\section{Relative pronouns}
 
-Is there any other observable difference between the languages? Yes! The shape of the relative pronouns.
+\section{Patterns without case competition}
 
-This will be intuition later
+\subsection{No mismatch allowed}
 
-\begin{itemize}
-  \item when a language's light-headed relatives are \tsc{d} - \tsc{wh}, non-matching is never allowed
-  \item with \tsc{wh} morphology, the internal case can win
-  \item with \tsc{d} morphology (or is it when the relative pronoun can take a complement?), both the external and the internal can win
-\end{itemize}
+pro-drop
+
+\ex.
+\ag. *Jan ufa kogokolkwiek wpu{\'s}cil do domu.\\
+Jan trusts\scsub{dat} who.\tsc{acc} let\scsub{acc} to home\\
+`Jan trusts whoever he let into the house.'
+\bg. *Jan ufa komukolkwiek wpu{\'s}cil do domu.\\
+Jan trusts\scsub{dat} who.\tsc{dat} let\scsub{acc} to home\\
+`Jan trusts whoever he let into the house.'
+
+\ex.
+\ag. *Jan lubi kogokolkwiek dokucza.\\
+Jan likes\scsub{acc} who.\tsc{acc} teases\scsub{dat}\\
+`Jan likes whoever he teases.'
+\bg. *Jan lubi komukolkwiek dokucza.\\
+Jan likes\scsub{acc} who.\tsc{dat} teases\scsub{dat}\\
+`Jan likes whoever he teases.'
+
+very small table, only acc and dat
+
+\subsection{External case surfaces}
 
 
-\begin{table}[H]
- \center
- \caption {Relative pronouns in headless relatives in \ac{mg}}
-  \begin{tabular}{ccc}
-  \toprule
-       & \ac{inan} & \ac{an} \\
-        \cmidrule{2-3}
-    \ac{nom}  & w-as     & w-er    \\
-    \ac{acc}  & w-as     & w-en   \\
-    \ac{dat}  & -      & w-em    \\
-  \bottomrule
-  \end{tabular}
-\end{table}
+\subsubsection{Greek}
 
-\begin{table}[H]\label{tbl:paradigmohg}
- \center
- \caption {Relative pronouns in headless relatives in \ac{ohg}}
-  \begin{tabular}{cccc}
-  \toprule
-       & \ac{n}.\ac{sg} & \ac{m}.\ac{sg}  & \ac{f}.\ac{sg} \\
-        \cmidrule{2-4}
-  \ac{nom} & d-aȥ           & d-ër          & d-iu      \\
-  \ac{acc} & d-aȥ        & d-ën      & d-ea/-ia/(-ie) \\
-  \ac{dat} & d-ëmu/-ëmo     & d-ëmu/-ëmo   & d-ëru/-ëro   \\
-  \bottomrule
-         & \ac{n}.\ac{pl} & \ac{m}.\ac{pl}   & \ac{f}.\ac{pl} \\
-          \cmidrule{2-4}
-    \ac{nom}  & d-iu/-ei      &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
-    \ac{acc}  & d-iu/-ei      &  d-ē/-ea/-ia/-ie & d-eo/-io        \\
-    \ac{dat}  & d-ēm/-ēn      &  d-ēm/-ēn        & d-ēm/-ēn        \\
-    \bottomrule
-  \end{tabular}
-\end{table}
+Dasalaki: `no case competition'
 
-\begin{table}[H]
- \center
- \caption {Relative pronouns in headless relatives in Gothic}
-  \begin{tabular}{cccc}
-  \toprule
-       & \ac{n}.\ac{sg}  & \ac{m}.\ac{sg} & \ac{f}.\ac{sg}  \\
-         \cmidrule{2-4}
-    \ac{nom}  & þ-at-ei      & s-a-ei      & s-ō-ei     \\
-    \ac{acc} & þ-at-ei       & þ-an-ei      & þ-ō-ei      \\
-    \ac{dat}  & þ-amm-ei     & þ-amm-ei    & þ-izái-ei    \\
-  \bottomrule
-         & \ac{n}.\ac{pl} & \ac{m}.\ac{pl} & \ac{f}.\ac{pl} \\
-          \cmidrule{2-4}
-    \ac{nom}  & þ-ō-ei     & þ-ái-ei     & þ-ōz-ei     \\
-    \ac{acc}  & þ-ō-ei      & þ-anz-ei    & þ-ōz-ei     \\
-    \ac{dat}  & þ-áim-ei    & þ-áim-ei     & þ-áim-ei     \\
-    \bottomrule
-  \end{tabular}
-\end{table}
+free relative pronoun takes main clause case
+
+first one without clitic
+
+\ex.
+\ag. Irϑan ópji káleses.\\
+came.3\tsc{pl}\scsub{nom} who.\tsc{nom.pl} invited.2\tsc{sg}\scsub{acc}\\
+`Whoever you invited came.' \hfill m:\tsc{nom}, e:\tsc{acc}, PL
+\bg. *Irϑan ópjus káleses.\\
+came.3\tsc{pl}\scsub{nom} who.\tsc{acc.pl} invited.2\tsc{sg}\scsub{acc}\\
+`Whoever you invited came.' \hfill m:\tsc{nom}, e:\tsc{acc}
+
+\ex.
+\ag. *Me efχarístisan ópjon íχa ósi leftá.\\
+\tsc{cl.1sg.acc} thanked.3\tsc{pl}\scsub{nom} who.\tsc{gen.pl} had.1\tsc{sg}\scsub{gen} given money\\
+`Whoever I had given money to thanked me.' \hfill m:\tsc{nom}, e:\tsc{gen}
+\bg. Me efχarístisan ópji tus íχa δósi leftá.\\
+\tsc{cl.1sg.acc} thanked.3\tsc{pl}\scsub{nom} who.\tsc{nom.pl} \tsc{cl.3pl.gen} had.1\tsc{sg}\scsub{gen} given money\\
+`Whoever I had given money to thanked me.' \hfill m:\tsc{nom}, e:\tsc{gen}
+
+second and third with clitic
+
+\ex.
+\ag. *Γnórisa ópju éδosan tin ipotrofia.\\
+met.1\tsc{sg}\scsub{acc} who.\tsc{gen.sg} gave.3\tsc{pl}\scsub{gen} the scholarship.\tsc{acc}\\
+`I met whoever they gave the scholarship to.' \hfill m:\tsc{acc}, e:\tsc{gen}
+\bg. Γnórisa ópjon tu éδosan tin ipotrofia.\\
+met.1\tsc{sg}\scsub{acc} who.\tsc{acc.sg} \tsc{cl.3sg.gen} gave.3\tsc{pl}\scsub{gen} the scholarship.\tsc{acc}\\
+`I met whoever they gave the scholarship to.' \hfill m:\tsc{acc}, e:\tsc{gen}
+
+
+
+\subsubsection{Old English}
+
+Harbert
+
+old english: matrix clause decides, going against case competition
+
+\tit{tōbrȳsan} `to pulversize' takes accusative objects, \tit{onuppan} `upon' takes dative objects.
+
+\exg. he tobryst ðone \tbf{ðe} \tbf{he} \tbf{onuppan} \tbf{fylð}\\
+ it pulverizes\scsub{[acc]}  \tsc{rel}.\ac{acc} \tsc{compl} it upon\scsub{[dat]} falls\\
+`It pulverizes him whom it falls upon.' adapted from St.Mat. 1249 after xx
+
+\subsection{No internal case surfaces}
+
+o
+%
+% only internal case when it's dislocated
+% and done de bu nu hafst, nis and pron-acc compl you now have not-is se bin wer he your husband 'And him who you now have, he is not your husband.' Alc.P.V. 37
+% but then there is this additional element, so a different construction
+%
