--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -2,31 +2,36 @@
 
 \chapter{Two attested patterns}
 
-I showed that headless relatives crosslinguistically make reference to the case scale: if two cases are in competition, it is always the same that wins.
-However, there is a second aspect to headless relatives, which differs across languages. That is, sometimes the case competition does not even take place, or rather, there is no winner to the competition. I show that whether is not the case competition takes place depends on the type of relative pronoun that is used. I distinguish two types of relative pronouns: \tsc{wh}-pronouns and \tsc{d}-pronouns.
+In Part X of this dissertation, I discussed a first aspect of case competition in headless relatives. When there is case competition, reference is always made to the same case scale: there is a fixed order that determines which case wins. The same case scale is used crosslinguistically.
 
-In what follows I first discuss the different possibilities for languages that show case competition.
-There are languages in which both the internal and the external case can win (like Gothic). There are also languages in which only the internal case can win. Crucially, there is no language in which a case competition takes place but only the external case can win.
-I summarize this in a table:
+However, there is a second aspect to headless relatives, which differs across languages. This has to do with whether case competition takes place in the first place. Languages differ in whether they allow the internal case or the external case to win the case competition. Logically speaking, there are three patterns possible for languages that show case competition.\footnote{
+In this stage, I do not discuss languages that do not allow internal or external case to win the case competition, because they do not show case competition. In Section X I come back to this kind of language.
+}
+
+The first possibility is that a language allows both the internal and the external case to win the competition. In this type of language, any two cases can be the internal and external case, and the case more to the right on the case scale surfaces.
+The second possibility is that a language allows the internal case to win the case competition, but it does not allow the external case to. In this type of language, only the internal case gets to surface if it is more to the right on the case scale. If the external case is more to the right on the case scale, it does not surface. In fact, there is no grammatical result possible.
+The third possibility is that a language allows the external case to win the case competition, but it does not allow the internal case to. In this type of language, only the external case gets to surface if it is more to the right on the case scale. If the internal case is more to the right on the case scale, it does not surface, and no grammatical result is possible.
+
+In this chapter I show that two of these three patterns are attested crosslinguistically. The first pattern, in which both internal and external case can win, is the one already exemplified by Gothic. I show that there is another language that shows the same pattern: Old High German. The second pattern, in which only the internal case wins, is exemplified by Modern German. There is no language in which only the external case wins the case competition. A summary of the patterns is given in \ref{tbl:int-ext-summary}.
 
 \begin{table}[H]
  \center
  \caption {Variation}
   \begin{tabular}{ccc}
   \toprule
-        & \ac{int}>\ac{ext}  & \ac{ext}>\ac{int} \\
-        \cmidrule{2-3}
-  Gothic OHG  & ✔          & ✔         \\
-  \ac{mg}  & ✔           & *         \\
-  n.a.     & *          & ✔         \\
+                    & \ac{int}>\ac{ext}  & \ac{ext}>\ac{int} \\
+                    \cmidrule{2-3}
+  Gothic, \ac{ohg}  & ✔                  & ✔                 \\
+  \ac{mg}           & ✔                  & *                 \\
+  n.a.              & *                  & ✔                 \\
   \bottomrule
-  \end{tabular}
+\end{tabular}\label{tbl:int-ext-summary}
 \end{table}
 
-Now there are also languages that do not do case competition. There are two types I found so far too:
-There are languages in which the external case always surfaces, no matter the internal case. These languages are for instance Old English and and Greek.
-Another type of language does not allow for any type of mismatch.
-What I have not seen so far: a language in which the internal case surfaces, no matter what happens with the external one.
+After I discuss the possible languages that show case competition, I briefly turn to some that do not.
+For instance, Polish is an example of a language that only allows for headless relatives in which the two cases are identical (or the phonological form that corresponds to the two cases is identical).
+Two other examples are Old English and Greek, which always let their relative pronoun appear in the external case, no matter the internal case.
+
 
 \section{Internal or external wins}
 
@@ -129,7 +134,7 @@ The relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in t
 \phantom{x}
 
 
-\section{Internal case wins}
+\section{Only internal case wins}
 
 There is really case competition: see appendix
 
@@ -229,9 +234,11 @@ To summarize
 \end{table}
 
 
+\section{No only external case wins}
 
 
-\section{Languages without case attraction}
+
+\section{Patterns without case competition}
 
 Old English, Old Icelandic both show: \tsc{d}-pronoun plus invariant relativizer + always take case from the main clause
 
@@ -254,7 +261,19 @@ Polish and Italian have \tsc{wh}-pronouns but do not allow for conflicts
 What does not exist: external only
 
 
-\section{Patterns without case competition}
+\begin{table}[H]
+ \center
+ \caption {Variation}
+  \begin{tabular}{ccc}
+  \toprule
+                      & \ac{ext}  & \ac{int} \\
+                      \cmidrule{2-3}
+  Polish              & *         & *        \\
+  Old English, Greek  & ✔         & *        \\
+  n.a.                & *         & ✔        \\
+  \bottomrule
+\end{tabular}\label{tbl:int-ext-summary}
+\end{table}
 
 \subsection{No mismatch allowed}
 
